# quiz-app

./: docker-compose.yaml  logging.conf  mypy.ini  pyproject.toml
config/: base.py
scripts/: create_project_structure.py
secret/: .env
tests/: conftest.py
tests/api/v1/: test_quiz_router.py
tests/database/postgres/: test_core.py  test_handler.py
