[tool.poetry]
name = "quiz-app"
version = "0.1.0"
description = ""
authors = ["Bongu Surendra Rao <surendrarao012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
uvicorn = "^0.27.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.39"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
coverage = "^7.7.0"
mypy = "^1.15.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
